--- a/resources.qrc
+++ b/resources.qrc
@@ -1,5 +1,5 @@
 <RCC>
     <qresource prefix="/">
-        <file>resources/wordart.png</file>
+        <file>resources/logo.png</file>
     </qresource>
 </RCC>
