telinha funcional com os quadradinhos separados. Mas vou mudar tudo para uma imagem só de background do jogo. Os items são apenas os objetos com interação, tipo players e npc

--- a/ui/windowprincipal.ui
+++ b/ui/windowprincipal.ui
@@ -15,6 +15,21 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout_2">
+    <property name="spacing">
+     <number>0</number>
+    </property>
+    <property name="leftMargin">
+     <number>0</number>
+    </property>
+    <property name="topMargin">
+     <number>0</number>
+    </property>
+    <property name="rightMargin">
+     <number>0</number>
+    </property>
+    <property name="bottomMargin">
+     <number>0</number>
+    </property>
     <item>
      <widget class="QStackedWidget" name="stackedWidget">
       <property name="currentIndex">
@@ -22,15 +37,51 @@
       </property>
       <widget class="QWidget" name="pageJogo">
        <layout class="QVBoxLayout" name="verticalLayout_3">
+        <property name="spacing">
+         <number>0</number>
+        </property>
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="topMargin">
+         <number>0</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
+        </property>
+        <property name="bottomMargin">
+         <number>0</number>
+        </property>
         <item>
-         <widget class="QGraphicsView" name="graphicsView"/>
+         <widget class="JogoView" name="jogoView"/>
         </item>
        </layout>
       </widget>
       <widget class="QWidget" name="pageMenuInicial">
        <layout class="QVBoxLayout" name="verticalLayout">
-        <item>
+        <property name="spacing">
+         <number>0</number>
+        </property>
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="topMargin">
+         <number>0</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
+        </property>
+        <property name="bottomMargin">
+         <number>0</number>
+        </property>
+        <item alignment="Qt::AlignHCenter|Qt::AlignVCenter">
          <widget class="QLabel" name="labelLogo">
+          <property name="maximumSize">
+           <size>
+            <width>800</width>
+            <height>640</height>
+           </size>
+          </property>
           <property name="text">
            <string/>
           </property>
@@ -39,6 +90,9 @@
           </property>
           <property name="scaledContents">
            <bool>true</bool>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
           </property>
          </widget>
         </item>
@@ -56,6 +110,13 @@
    </layout>
   </widget>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>JogoView</class>
+   <extends>QGraphicsView</extends>
+   <header>jogoview.h</header>
+  </customwidget>
+ </customwidgets>
  <resources>
   <include location="../resources.qrc"/>
  </resources>
