--- a/ui/windowprincipal.ui
+++ b/ui/windowprincipal.ui
@@ -36,7 +36,7 @@
        <number>0</number>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="pageJogo">
        <widget class="JogoView" name="jogoView">
@@ -127,14 +127,14 @@
            <bool>false</bool>
           </property>
           <property name="currentText">
-           <string>Classe do Personagem</string>
+           <string>Samurai</string>
           </property>
           <property name="placeholderText">
            <string extracomment="Classe do Personagem"/>
           </property>
           <item>
            <property name="text">
-            <string>Classe do Personagem</string>
+            <string>Samurai</string>
            </property>
           </item>
           <item>
